[package]

name = "tst"
version = "0.9.1"

authors = ["Alexey Pervushin <pervushinai@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Ternary search trie collection in rust with similar API to std::collections as it possible"
keywords = ["data-structures"]
categories = ["data-structures", "text-processing"]
repository = "https://github.com/billyevans/tst"
homepage = "https://github.com/billyevans/tst"
documentation = "http://billyevans.github.io/tst/tst"
include = ["src/*.rs", "Cargo.toml"]

[dev-dependencies]
libc = "v0.2.35"
rand = "v0.4.1"
